1998-03-09  Ulrich Drepper  <drepper@cygnus.com>

	* elf/dl-support.c: Add definition of _dl_debug_impcalls.

1998-03-08  Ulrich Drepper  <drepper@cygnus.com>

	* elf/rtld.c (process_envvars): Also recognize LD_LIBRARY_PATH,
	LD_PRELOAD, and LD_VERBOSE.
	(dl_main): Use global variables set by process_envvars instead of
	calling getenv.
	* elf/dl-load.c (_dl_init_paths): Don't call getenv to get
	LD_LIBRARY_PATH value, this comes with the parameter.
	* elf/dl-support.c (non_dynamic_init): Pass return value of getenv
	("LD_LIBRARY_PATH") to _dl_init_paths.

1998-03-08 22:55  Ulrich Drepper  <drepper@cygnus.com>

	* elf/rtld.c (dl_main): Delay initialization of path structure if
	the dynamically linker is invoked implicitly until we read the
	dynamic section.

1998-03-08  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/chown.c: Add versioning stuff.

1998-03-07  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* sysdeps/unix/sysv/linux/chown.c: New file for compatibility of
	Linux 2.0 and 2.1.

	* sysdeps/unix/sysv/linux/syscalls.list: Add chown.

1998-03-08 14:58  Ulrich Drepper  <drepper@cygnus.com>

	* Makeconfig (nisobjdir): Set to path to nis directory.
	(rpath-link): Add nisobjdir.
	Patch by Sven Verdoolaege <skimo@kotnet.org>.

	* elf/Makefile: Pretty print.
	* elf/dl-lookup.c: Include unistd.h.
	* elf/dl-runtime.c: Likewise.

	* localedata/Makefile (test-srcs): Add tst-rpmatch.
	(distribute): Add tst-rpmatch.sh.
	(tests): Add tst-rpmatch to dependency list and run tst-rpmatch.sh.

	New tests for rpmatch function by
	Jochen Hein <jochen.hein@delphi.central.de>.
	* localedata/tst-rpmatch.c: New file.
	* localedata/tst-rpmatch.sh: New file.

	* localedata/locales/de_DE: Correct yesexpr and noexpr.
	* localedata/locales/de_AT: Likewise.

	* posix/getopt.c: Update contact address.
	* posix/getopt1.c: Pretty print.

	* sysdeps/generic/libc-start.c: Do most of the initialization now
	here instead of in start.S.